# STM32_CMake

./: .mxproject  CMakeLists.txt  LICENSE  Makefile  README.md  arm-none-eabi-gcc_toolchain.cmake  stm32_cmake.ioc
Drivers/STM32F4xx_HAL_Driver/: CMakeLists.txt
Inc/: main.h  stm32f4xx_hal_conf.h  test_cpp.h
Src/: main.c  test_cpp.cpp
TestLibrary/: CMakeLists.txt  test_library.c  test_library.h
